@@ -1,4 +1,4 @@
-/* $Id: main.c,v 1.82 2002/02/13 17:24:24 ukai Exp $ */
+/* $Id: main.c,v 1.83 2002/02/14 15:10:30 ukai Exp $ */
 #define MAINPROGRAM
 #include "fm.h"
 #include <signal.h>
@@ -4541,14 +4541,12 @@ dispI(void)
 	initImage();
     if (!activeImage)
 	return;
-    if (!displayImage || Currentbuf->image_flag == IMG_FLAG_SKIP) {
-	displayImage = TRUE;
-	if (!(Currentbuf->type && !strcmp(Currentbuf->type, "text/html")))
-	    return;
-	Currentbuf->image_flag = IMG_FLAG_AUTO;
-	Currentbuf->need_reshape = TRUE;
-	displayBuffer(Currentbuf, B_REDRAW_IMAGE);
-    }
+    displayImage = TRUE;
+    if (!(Currentbuf->type && !strcmp(Currentbuf->type, "text/html")))
+	return;
+    Currentbuf->image_flag = IMG_FLAG_AUTO;
+    Currentbuf->need_reshape = TRUE;
+    displayBuffer(Currentbuf, B_REDRAW_IMAGE);
 }
 
 void
@@ -4556,8 +4554,10 @@ stopI(void)
 {
     if (!activeImage)
 	return;
+    if (!(Currentbuf->type && !strcmp(Currentbuf->type, "text/html")))
+	return;
     Currentbuf->image_flag = IMG_FLAG_SKIP;
-    displayBuffer(Currentbuf, B_NORMAL);
+    displayBuffer(Currentbuf, B_REDRAW_IMAGE);
 }
 #endif
 
